--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
   <title>Castoon App</title>
 </head>
 <body>
-  <div id="app"></div>
+  <div id="app">
+    <h1>Castoon</h1>
+  </div>
 </body>
 </html>
